--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,17 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
-        "guzzlehttp/guzzle": "^7.2",
+        "ext-curl": "^8.1",
+        "ext-json": "^8.1",
+        "creativeorange/gravatar": "~1.0",
+        "glhd/gretel": "^1.5",
+        "guzzlehttp/guzzle": "^7.4",
+        "inertiajs/inertia-laravel": "^0.5.4",
+        "infobip/infobip-api-php-client": "^3.2",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "tightenco/ziggy": "^1.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
