--- a/package.json
+++ b/package.json
@@ -10,9 +10,29 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.7",
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.4.13",
+        "tailwindcss": "^3.0.24",
+        "vue-loader": "^16.8.3"
+    },
+    "dependencies": {
+        "@headlessui/vue": "^1.6.1",
+        "@heroicons/vue": "^1.0.6",
+        "@inertiajs/inertia": "^0.11.0",
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@inertiajs/progress": "^0.2.7",
+        "@tailwindcss/forms": "^0.5.1",
+        "daisyui": "^2.14.3",
+        "dayjs": "^1.11.1",
+        "flowbite": "^1.4.5",
+        "gsap": "^3.10.4",
+        "primeicons": "^5.0.0",
+        "primevue": "^3.12.6",
+        "url-loader": "^4.1.1",
+        "vue": "^3.2.31",
+        "ziggy-js": "^1.4.6"
     }
 }
